--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     }
     nav a:hover { background: #ff9800; color: #fff; }
 
-    .toggle-buttons { margin: 15px; text-align: center; }
+    .toggle-buttons { margin: 15px; text-align: left; }
     .toggle-buttons button {
       margin: 0 8px;
       padding: 8px 14px;
