--- a/login.html
+++ b/login.html
@@ -2,66 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login / Signup</title>
+  <title>Login - BookHub</title>
 </head>
 <body>
-  <h2>Login / Signup</h2>
-
-  <input type="email" id="email" placeholder="Enter Email"><br><br>
-  <input type="password" id="password" placeholder="Enter Password"><br><br>
-
-  <button onclick="signup()">Sign Up</button>
+  <h2>Login</h2>
+  <input type="email" id="loginEmail" placeholder="Email">
+  <input type="password" id="loginPassword" placeholder="Password">
   <button onclick="login()">Login</button>
 
-  <p id="msg"></p>
+  <h2>Sign Up</h2>
+  <input type="email" id="signupEmail" placeholder="Email">
+  <input type="password" id="signupPassword" placeholder="Password">
+  <button onclick="signup()">Sign Up</button>
 
-  <!-- Firebase SDKs (modular v10 style) -->
-  <script type="module">
-    // Import Firebase
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } 
-      from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+  <p id="message"></p>
 
-    // Your Firebase Config
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+
+  <script>
+    // Tumhara Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyDWwnUZ5i90ZvRhi6HMxeOOsURAsIQgxgM",
       authDomain: "pdpbookhubvgd.firebaseapp.com",
       projectId: "pdpbookhubvgd",
-      storageBucket: "pdpbookhubvgd.appspot.com",
+      storageBucket: "pdpbookhubvgd.firebasestorage.app",
       messagingSenderId: "248040452875",
-      appId: "1:248040452875:web:a22f7213f7c844aaf1280e"
+      appId: "1:248040452875:web:a22f7213f7c844aaf1280e",
+      measurementId: "G-52587CFHS2"
     };
 
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+    // Firebase init
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
 
-    // Signup function
-    window.signup = function() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      createUserWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-          document.getElementById("msg").innerText = "✅ Signup Successful!";
+    function signup() {
+      const email = document.getElementById("signupEmail").value;
+      const password = document.getElementById("signupPassword").value;
+      auth.createUserWithEmailAndPassword(email, password)
+        .then(() => {
+          document.getElementById("message").innerText = "✅ Signup Successful";
         })
-        .catch((error) => {
-          document.getElementById("msg").innerText = "❌ " + error.message;
+        .catch(error => {
+          document.getElementById("message").innerText = error.message;
         });
     }
 
-    // Login function
-    window.login = function() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      signInWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-          document.getElementById("msg").innerText = "✅ Login Successful!";
+    function login() {
+      const email = document.getElementById("loginEmail").value;
+      const password = document.getElementById("loginPassword").value;
+      auth.signInWithEmailAndPassword(email, password)
+        .then(() => {
+          document.getElementById("message").innerText = "✅ Login Successful";
         })
-        .catch((error) => {
-          document.getElementById("msg").innerText = "❌ " + error.message;
+        .catch(error => {
+          document.getElementById("message").innerText = error.message;
         });
     }
   </script>
