--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 
   <script>
-    // Tumhara Firebase config
+    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyDWwnUZ5i90ZvRhi6HMxeOOsURAsIQgxgM",
       authDomain: "pdpbookhubvgd.firebaseapp.com",
@@ -33,33 +33,44 @@
       measurementId: "G-52587CFHS2"
     };
 
-    // Firebase init
+    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
+    // Signup function
     function signup() {
       const email = document.getElementById("signupEmail").value;
       const password = document.getElementById("signupPassword").value;
       auth.createUserWithEmailAndPassword(email, password)
         .then(() => {
-          document.getElementById("message").innerText = "✅ Signup Successful";
+          document.getElementById("message").innerText = "✅ Signup Successful, redirecting...";
+          setTimeout(() => window.location.href = "index.html", 1000);
         })
         .catch(error => {
           document.getElementById("message").innerText = error.message;
         });
     }
 
+    // Login function
     function login() {
       const email = document.getElementById("loginEmail").value;
       const password = document.getElementById("loginPassword").value;
       auth.signInWithEmailAndPassword(email, password)
         .then(() => {
-          document.getElementById("message").innerText = "✅ Login Successful";
+          document.getElementById("message").innerText = "✅ Login Successful, redirecting...";
+          setTimeout(() => window.location.href = "index.html", 1000);
         })
         .catch(error => {
           document.getElementById("message").innerText = error.message;
         });
     }
+
+    // Already logged in? Redirect to index.html
+    auth.onAuthStateChanged(user => {
+      if (user) {
+        window.location.href = "index.html";
+      }
+    });
   </script>
 </body>
 </html>
