--- a/index.html
+++ b/index.html
@@ -71,6 +71,23 @@
         window.location.href = "index.html";
       }
     });
-  </script>
+  </script><!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyDWwnUZ5i90ZvRhi6HMxeOOsURAsIQgxgM",
+    authDomain: "pdpbookhubvgd.firebaseapp.com",
+    projectId: "pdpbookhubvgd",
+    storageBucket: "pdpbookhubvgd.firebasestorage.app",
+    messagingSenderId: "248040452875",
+    appId: "1:248040452875:web:a22f7213f7c844aaf1280e",
+    measurementId: "G-52587CFHS2"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+</script>
+
 </body>
 </html>
+
