--- a/Home.html
+++ b/Home.html
@@ -39,7 +39,7 @@
     header p { font-size: 1.2rem; }
 
     nav { text-align: center; margin-top: 10px; }
-    nav a {
+    nav a, nav button {
       text-decoration: none;
       margin: 0 10px;
       font-weight: bold;
@@ -48,8 +48,10 @@
       background: rgba(0,0,0,0.3);
       color: inherit;
       transition: 0.3s;
+      border: none;
+      cursor: pointer;
     }
-    nav a:hover { background: #ff9800; color: #fff; }
+    nav a:hover, nav button:hover { background: #ff9800; color: #fff; }
 
     .toggle-buttons { margin: 15px; text-align: center; }
     .toggle-buttons button {
@@ -177,6 +179,7 @@
     <a href="index.html" data-en="🏠 Home">🏠 Home</a>
     <a href="summaries.html" data-en="📖 Summaries">📖 Summaries</a>
     <a href="about.html" data-en="ℹ️ About Us">ℹ️ About Us</a>
+    <button id="logoutBtn">🚪 Logout</button>
   </nav>
 
   <div class="toggle-buttons">
@@ -287,7 +290,6 @@
       const elements = document.querySelectorAll("[data-en]");
       elements.forEach(el => {
         if(!el.dataset.hi) {
-          // Hindi translations
           el.dataset.hi = el.dataset.en === "📚 Welcome to Book Hub" ? "📚 बुक हब में आपका स्वागत है" :
                          el.dataset.en === "Explore life-changing books with short and meaningful summaries" ? "संक्षिप्त और सार्थक सारांश के साथ जीवन बदलने वाली किताबें खोजें" :
                          el.dataset.en === "🏠 Home" ? "🏠 होम" :
@@ -314,8 +316,14 @@
         el.innerText = el.innerText === el.dataset.en ? el.dataset.hi : el.dataset.en;
       });
     });
+
+    // Logout Function
+    const logoutBtn = document.getElementById("logoutBtn");
+    logoutBtn.addEventListener("click", () => {
+      localStorage.clear();
+      alert("You have been logged out!");
+      window.location.href = "login.html"; // apna login page ka naam yaha likho
+    });
   </script>
 </body>
 </html>
-
-
