--- a/index.html
+++ b/index.html
@@ -2,90 +2,56 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login - BookHub</title>
+  <title>BookHub - Home</title>
+  <style>
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: #333;
+      padding: 10px;
+    }
+    nav a, nav button {
+      color: white;
+      text-decoration: none;
+      margin: 0 10px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    nav button:hover, nav a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h2>Login</h2>
-  <input type="email" id="loginEmail" placeholder="Email">
-  <input type="password" id="loginPassword" placeholder="Password">
-  <button onclick="login()">Login</button>
+  <nav>
+    <div>
+      <a href="index.html">🏠 Home</a>
+      <a href="summaries.html">📖 Summaries</a>
+      <a href="about.html">ℹ️ About Us</a>
+    </div>
+    <div>
+      <button id="logoutBtn">🚪 Logout</button>
+    </div>
+  </nav>
 
-  <h2>Sign Up</h2>
-  <input type="email" id="signupEmail" placeholder="Email">
-  <input type="password" id="signupPassword" placeholder="Password">
-  <button onclick="signup()">Sign Up</button>
-
-  <h2>Logout</h2>
-  <button onclick="logout()">Logout</button>
-
-  <p id="message"></p>
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <h1>Welcome to BookHub 📚</h1>
+  <p>Explore amazing book summaries!</p>
 
   <script>
-    // Firebase config
-    const firebaseConfig = {
-      apiKey: "AIzaSyDWwnUZ5i90ZvRhi6HMxeOOsURAsIQgxgM",
-      authDomain: "pdpbookhubvgd.firebaseapp.com",
-      projectId: "pdpbookhubvgd",
-      storageBucket: "pdpbookhubvgd.firebasestorage.app",
-      messagingSenderId: "248040452875",
-      appId: "1:248040452875:web:a22f7213f7c844aaf1280e",
-      measurementId: "G-52587CFHS2"
-    };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-
-    // Signup function
-    function signup() {
-      const email = document.getElementById("signupEmail").value;
-      const password = document.getElementById("signupPassword").value;
-      auth.createUserWithEmailAndPassword(email, password)
-        .then(() => {
-          document.getElementById("message").innerText = "✅ Signup Successful, redirecting...";
-          setTimeout(() => window.location.href = "index.html", 1000);
-        })
-        .catch(error => {
-          document.getElementById("message").innerText = "❌ " + error.message;
-        });
+    // Check login status
+    if (!localStorage.getItem("loggedIn")) {
+      // If not logged in → redirect to login page
+      window.location.href = "login.html";
     }
 
-    // Login function
-    function login() {
-      const email = document.getElementById("loginEmail").value;
-      const password = document.getElementById("loginPassword").value;
-      auth.signInWithEmailAndPassword(email, password)
-        .then(() => {
-          document.getElementById("message").innerText = "✅ Login Successful, redirecting...";
-          setTimeout(() => window.location.href = "index.html", 1000);
-        })
-        .catch(error => {
-          document.getElementById("message").innerText = "❌ " + error.message;
-        });
-    }
-
-    // Logout function
-    function logout() {
-      auth.signOut()
-        .then(() => {
-          document.getElementById("message").innerText = "✅ Logged out successfully";
-        })
-        .catch(error => {
-          document.getElementById("message").innerText = "❌ " + error.message;
-        });
-    }
-
-    // Redirect if already logged in
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        console.log("User is logged in:", user.email);
-      } else {
-        console.log("No user logged in");
-      }
+    // Logout button functionality
+    document.getElementById("logoutBtn").addEventListener("click", () => {
+      localStorage.removeItem("loggedIn");
+      alert("Logged out successfully!");
+      window.location.href = "login.html";
     });
   </script>
 </body>
