--- a/login.html
+++ b/login.html
@@ -1,77 +1,95 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Login - BookHub</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: #f4f4f9;
+    }
+    .container {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      width: 320px;
+      text-align: center;
+    }
+    h2 {
+      margin-bottom: 20px;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    .login-btn {
+      background: #28a745;
+      color: white;
+    }
+    .signup-btn {
+      background: #007bff;
+      color: white;
+    }
+    .login-btn:hover { background: #218838; }
+    .signup-btn:hover { background: #0056b3; }
+  </style>
 </head>
 <body>
-  <h2>Login</h2>
-  <input type="email" id="loginEmail" placeholder="Email">
-  <input type="password" id="loginPassword" placeholder="Password">
-  <button onclick="login()">Login</button>
+  <div class="container">
+    <h2>Login</h2>
+    <input type="email" id="loginEmail" placeholder="Email">
+    <input type="password" id="loginPassword" placeholder="Password">
+    <button class="login-btn" onclick="login()">Login</button>
 
-  <h2>Sign Up</h2>
-  <input type="email" id="signupEmail" placeholder="Email">
-  <input type="password" id="signupPassword" placeholder="Password">
-  <button onclick="signup()">Sign Up</button>
-
-  <p id="message"></p>
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <h2>Sign Up</h2>
+    <input type="email" id="signupEmail" placeholder="Email">
+    <input type="password" id="signupPassword" placeholder="Password">
+    <button class="signup-btn" onclick="signup()">Sign Up</button>
+  </div>
 
   <script>
-    // Firebase config
-    const firebaseConfig = {
-      apiKey: "AIzaSyDWwnUZ5i90ZvRhi6HMxeOOsURAsIQgxgM",
-      authDomain: "pdpbookhubvgd.firebaseapp.com",
-      projectId: "pdpbookhubvgd",
-      storageBucket: "pdpbookhubvgd.firebasestorage.app",
-      messagingSenderId: "248040452875",
-      appId: "1:248040452875:web:a22f7213f7c844aaf1280e",
-      measurementId: "G-52587CFHS2"
-    };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-
-    // Signup function
-    function signup() {
-      const email = document.getElementById("signupEmail").value;
-      const password = document.getElementById("signupPassword").value;
-      auth.createUserWithEmailAndPassword(email, password)
-        .then(() => {
-          document.getElementById("message").innerText = "✅ Signup Successful, redirecting...";
-          setTimeout(() => window.location.href = "index.html", 1000);
-        })
-        .catch(error => {
-          document.getElementById("message").innerText = error.message;
-        });
+    // Redirect if already logged in
+    if (localStorage.getItem("loggedIn")) {
+      window.location.href = "index.html";
     }
 
-    // Login function
     function login() {
-      const email = document.getElementById("loginEmail").value;
-      const password = document.getElementById("loginPassword").value;
-      auth.signInWithEmailAndPassword(email, password)
-        .then(() => {
-          document.getElementById("message").innerText = "✅ Login Successful, redirecting...";
-          setTimeout(() => window.location.href = "index.html", 1000);
-        })
-        .catch(error => {
-          document.getElementById("message").innerText = error.message;
-        });
+      let email = document.getElementById("loginEmail").value;
+      let pass = document.getElementById("loginPassword").value;
+
+      // Demo login (fixed email & password)
+      if (email === "test@gmail.com" && pass === "123456") {
+        localStorage.setItem("loggedIn", "true");
+        alert("Login successful!");
+        window.location.href = "index.html";
+      } else {
+        alert("Invalid email or password!");
+      }
     }
 
-    // Already logged in? Redirect to index.html
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        window.location.href = "index.html";
-      }
-    });
+    function signup() {
+      let email = document.getElementById("signupEmail").value;
+      let pass = document.getElementById("signupPassword").value;
+      // Demo signup
+      alert("Account created for " + email + " (demo only, not saved).");
+    }
   </script>
 </body>
 </html>
