--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - BookHub</title>
 </head>
 <body>
@@ -15,56 +16,70 @@
   <input type="password" id="signupPassword" placeholder="Password">
   <button onclick="signup()">Sign Up</button>
 
-  <script type="module">
-    // Import Firebase SDKs
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } 
-      from "https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js";
+  <button onclick="logout()">Logout</button>
 
-    // 🔥 Your Firebase Config
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
+
+  <script>
+    // ✅ तुम्हारा Firebase config (screenshot से लिया हुआ)
     const firebaseConfig = {
-      apiKey: "AIzaSyAPutXLS9PU_Bn6kM2WpJbMdZZbo",
+      apiKey: "AIzaSyDuPxLz5PUv_BnKM2Wp_bJMd4ZzEbo",
       authDomain: "pdpbookhubvgd-79153.firebaseapp.com",
       projectId: "pdpbookhubvgd-79153",
       storageBucket: "pdpbookhubvgd-79153.firebasestorage.app",
       messagingSenderId: "1066900766247",
-      appId: "1:1066900766247:web:2d7587c63ff50935d8802",
-      measurementId: "G-N3TJ4H0KNF"
+      appId: "1:1066900766247:web:2af597c26f9f5d0935d802",
+      measurementId: "G-N3TJ4HJK0M"
     };
 
     // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
 
-    // Signup function
-    async function signup() {
+    // ✅ Signup function
+    function signup() {
       const email = document.getElementById("signupEmail").value;
       const password = document.getElementById("signupPassword").value;
-      try {
-        await createUserWithEmailAndPassword(auth, email, password);
-        alert("✅ Signup successful! Now login with same credentials.");
-      } catch (error) {
-        alert("❌ Signup error: " + error.message);
-      }
+
+      auth.createUserWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+          alert("Signup successful!");
+          console.log(userCredential.user);
+        })
+        .catch((error) => {
+          alert(error.message);
+        });
     }
 
-    // Login function
-    async function login() {
+    // ✅ Login function
+    function login() {
       const email = document.getElementById("loginEmail").value;
       const password = document.getElementById("loginPassword").value;
-      try {
-        await signInWithEmailAndPassword(auth, email, password);
-        alert("✅ Login successful!");
-        // Redirect to home page after login
-        window.location.href = "index.html";
-      } catch (error) {
-        alert("❌ Login error: " + error.message);
-      }
+
+      auth.signInWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+          alert("Login successful!");
+          console.log(userCredential.user);
+          // login ke baad redirect
+          window.location.href = "index.html";
+        })
+        .catch((error) => {
+          alert(error.message);
+        });
     }
 
-    // Expose functions to window
-    window.signup = signup;
-    window.login = login;
+    // ✅ Logout function
+    function logout() {
+      auth.signOut()
+        .then(() => {
+          alert("Logged out!");
+        })
+        .catch((error) => {
+          alert(error.message);
+        });
+    }
   </script>
 </body>
 </html>
